# kamism

./: .env.development  .env.local  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.standalone  Dockerfile.web  ENCRYPTION_GUIDE.md  ENCRYPTION_IMPLEMENTATION.md  ENCRYPTION_SUMMARY.md  LICENSE  README.md  docker-compose.standalone.yml  docker-compose.yml  docker-entrypoint.sh  env.example  index.html  nginx.conf  nginx.standalone.conf  package-lock.json  package.json  supervisord.conf  vite.config.ts
server/: Cargo.toml
server/src/: main.rs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  001_init_complete.sql  002_add_oauth.sql  002_perf_indexes.sql  002_plan.sql  002_subscription_plans.sql  003_plan_configs.sql  004_oauth_configs.sql  004_payment_configs.sql  004_plan_expires.sql  005_downgraded_flag.sql  005_payment_configs.sql  006_admin_disabled.sql  006_update_payments_constraints.sql  007_subscription_plan_fk.sql  008_merchant_plan_expiry_index.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: encrypted_fields.rs  mod.rs
src-tauri/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
src-tauri/src/models/: activation.rs  admin.rs  app.rs  card.rs  merchant.rs  message.rs  mod.rs  oauth_config.rs  payment_config.rs  plan_config.rs  subscription_plan.rs
src-tauri/src/routes/: activations.rs  admin.rs  agent.rs  apps.rs  auth.rs  blacklist.rs  cards.rs  health.rs  merchant.rs  messages.rs  mod.rs  oauth.rs  oauth_admin.rs  payment_admin.rs  payments.rs  plan_config.rs  public_api.rs  subscription_plan.rs  webhooks.rs
src-tauri/src/utils/: card_gen.rs  error.rs  jwt.rs  kms.rs  mailer.rs  mod.rs  mq.rs  oauth.rs  ws.rs
src-tauri/src/workers/: downgrade.rs  mod.rs
src/components/: ConfirmDialog.tsx  Layout.tsx
src/hooks/: useWs.ts
src/lib/: api.ts
src/pages/admin/: AdminOrders.tsx  ApiDocs.tsx  Dashboard.tsx  Merchants.tsx  Messages.tsx  OAuthSettings.tsx  PaymentSettings.tsx  (+1 more)
src/stores/: auth.ts  confirm.ts  theme.ts  wsEvent.ts
(+16 files in other folders)
