[package]
name = "kamism"
version = "0.1.0"
description = "KamiSM - 卡密管理系统"
authors = ["zf26"]
edition = "2021"
default-run = "kamism"

[lib]
name = "kamism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# tauri feature：桌面客户端编译时启用，服务器端不需要
desktop = ["tauri", "tauri-plugin-opener", "tauri-plugin-shell", "tauri-build"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# Tauri（仅桌面客户端需要）
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }

# Web 框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 认证
jsonwebtoken = "9"
bcrypt = "0.15"

# 工具
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
base32 = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
regex = "1"

# 邮件
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Redis（验证码存储）
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# RabbitMQ（异步降级任务）
lapin = "4"
futures-lite = "2"

# 加密
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
